Change Log for OpenXava project
===============================

- Fix: updateOX fails to update the Addons jar in windows from time to time.
- Fix: XPersistence.setDefaultSchema() does not work with MySQL.
- Fix: Some details in course are not adapted to recent versions. 
- Fix: Tab.setBaseCondition() on change module module keeps the last user condition in that module.
- Fix: Tab.setBaseCondition() does not take effect on change module until clicking on filter button.
- Fix: Tab.setBaseCondition() does not change the current filtering configuration in combo.
- Fix: Throwing org.openxava.validators.ValidationException from @PreUpdate shows a transaction error.
- Fix: @ElementCollection with only booleans does not get the value correctly. 
- Fix: @ElementCollection with a @DefaultValueCalcultor property fails if property is not present.
- First module page load is done via AJAX.
- Fix: When page loaded slowly the user can click actions before page initialization that fails. 
- Fix: JavaScript of IJavaScriptPostAction is not executed on browser page refresh. 
- Fix: Moving a column when customizing a list produces an error dialog and it is not persisted.

OpenXava 6.1 (2019-3-26)
------------------------
- Dropped support for Java 6 and 7, now Java 8 is the minimum requirement.
- Dropped support for WebSphere Application Server 8 and WebSphere Portal 8. 
- JPA 2.2 support.
- Bean Validation 2.0 support.
- LocalDate from Java 8 supported as property type. 
- All annotations susceptible to be grouped are repeatable.
- Tooltip for module description in left menu when the module description doesn't match the name.
- Parsing of filter arguments in list is done using the editor formatter for the type.
- New method getCurrentIP() in Users class.
- 25% of performance improvement in jUnit tests.
- Added new utility libraries: commons-text 1.4, commons-collections4 4.3.
- JasperReports upgraded to 6.7.0.
- Hibernate upgraded to 5.3.9.
- Hibernate Envers upgraded to 5.3.9.		